--- a/views/about.hbs
+++ b/views/about.hbs
@@ -25,7 +25,7 @@
               </div>
           </header>
           <hr class="-mt-4">
-          <h1 class="text-4xl text-center tracking-wider p-2 mt-48 font-sans font-semibold sm:text-4xl md:text-4xl xlg:text-4xl">ABOUT</h1>
+          <h1 class="text-4xl text-center tracking-wider p-2 mt-48 font-sans font-semibold sm:text-4xl md:text-4xl xlg:text-4xl uppercase">ABOUT</h1>
           <hr class="coverHr w-1/4 center mx-auto">
           <div class="tracking-widest text-center pt-1">
             <p>Learn more about VINCI's</p>
@@ -76,7 +76,7 @@
 
       <section class=" mb-4 text-primary panel bg-secondary">
         <section class="text-gray-700 body-font">
-              <div class="container px-5 py-24 mx-auto">
+              <div class="container pr-8 pl-4 py-24 mx-auto">
                 <div class="flex flex-col text-center w-full mb-20">
                 <!--Come back here later to practice responsive-->
                 <h1 class="sm:text-3xl text-2xl font-medium title-font mb-4 text-primary font-sans">Our Team</h1>
@@ -90,12 +90,12 @@
                         <span class="close">&times;</span>
                         <img class="modal-content" id="img01">
                         <div class="bio p-2">
-                           <h2 class="text-left text-lg mt-2 mb-2">Eagle Wu</h2>
-                          <hr>
+                           <h2 class="text-left text-lg mt-2 mb-1">Eagle Wu</h2>
+                          <hr class="mb-1">
                           <h5 class="text-left text-sm">Enterpreneurship @Babson College</h5>
                           <h5 class="text-left text-sm">Winner, Money 20/20 Global Hackathon</h5>
-                          <hr>
-                          <p class="text-xs text-left mt-2">
+                          <hr class="mt-1">
+                          <p class="text-xs text-left mt-3">
                               Modern virtual reality headset displays are based on technology developed for smartphones including: gyroscopes and motion sensors for tracking head, body, and hand positions; small HD screens for stereoscopic displays; and small, lightweight and fast computer processors.
                           </p>
                         </div>
@@ -172,7 +172,7 @@
 
         <section class="bg-secondary panel">
            <footer class="bg-secondary bg-bottom bg-cover text-primary body-font  p-4 md:mt-24 lg:mt-24" style="background-image: url('../public/img/contactbckgrnd.png')">
-             <h1 class ="text-primary text-center sm:text-4xl text-3xl">Want to Learn More About VR Training?</h1>
+             <h1 class ="text-primary text-center sm:text-4xl text-3xl font-sans">Want to Learn More About VR Training?</h1>
              <div class="flex flex-col justify-center mt-24">
              <button class="w-1/5 mx-auto text-white border-sloid border-2 py-2 px-6 focus:outline-none hover:bg-red-600 text-lg">Check Out Our Blogs</button>
              <p class="mx-auto text-Center text-2xl text-primary text-semibold">-or-</p>
@@ -208,31 +208,6 @@
                  </div>
                </div>
              </div>
-             <!-- <div class="bg-gray-200">
-               <div class="container mx-auto py-4 px-5 flex flex-wrap flex-col sm:flex-row">
-                 <p class="text-gray-500 text-sm text-center sm:text-left">© 2020 VINCI-VR —
-                   <a href="" rel="noopener noreferrer" class="text-gray-600 ml-1" target="_blank">@tresstudios</a>
-                 </p>
-                 <span class="inline-flex sm:ml-auto sm:mt-0 mt-2 justify-center sm:justify-start">
-                   <a class="text-gray-500">
-                     <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
-                       <path d="M18 2h-3a5 5 0 00-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 011-1h3z"></path>
-                     </svg>
-                   </a>
-                   <a class="ml-3 text-gray-500">
-                     <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
-                       <path d="M23 3a10.9 10.9 0 01-3.14 1.53 4.48 4.48 0 00-7.86 3v1A10.66 10.66 0 013 4s-4 9 5 13a11.64 11.64 0 01-7 2c9 5 20 0 20-11.5a4.5 4.5 0 00-.08-.83A7.72 7.72 0 0023 3z"></path>
-                     </svg>
-                   </a>
-                   <a class="ml-3 text-gray-500">
-                     <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
-                       <rect width="20" height="20" x="2" y="2" rx="5" ry="5"></rect>
-                       <path d="M16 11.37A4 4 0 1112.63 8 4 4 0 0116 11.37zm1.5-4.87h.01"></path>
-                     </svg>
-                   </a>
-                 </span>
-               </div>
-             </div> -->
            </footer>
         </section>
 
