--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -25,7 +25,7 @@
               </div>
           </header>
           <hr class="-mt-4">
-          <h1 class="text-left tracking-wider p-4 mt-48 ml-24 sm:text-6xl md:text-5xl xlg:text-6xl">CONTACT</h1>
+          <h1 class="text-left tracking-wider p-4 mt-48 ml-24 sm:text-4xl md:text-4xl xlg:text-4xl font-sans font-semibold">CONTACT</h1>
           <div class="tracking-widest text-left p-4 ml-24">
             <p>Have any questions?</p>
             <p>Drop us a message.</p>
@@ -54,6 +54,51 @@
              </div>
            </section>
        </section>
+
+       <section class="bg-secondary panel">
+          <footer class="bg-secondary bg-bottom bg-cover text-primary body-font  p-4 md:mt-24 lg:mt-24" style="background-image: url('../public/img/contactbckgrnd.png')">
+            <h1 class ="text-primary text-center sm:text-4xl text-3xl">Want to Learn More About VR Training?</h1>
+            <div class="flex flex-col justify-center mt-24">
+            <a href="/blogs">
+              <button class="w-1/5 mx-auto text-white border-sloid border-2 py-2 px-6 focus:outline-none hover:bg-red-600 text-lg">Check Out Our Blogs</button>
+            <a>
+            <p class="mx-auto text-Center text-2xl text-primary text-semibold">-or-</p>
+            <button class=" w-1/5 mx-auto text-white border-sloid border-2 py-2 px-6 focus:outline-none hover:bg-red-600 text-lg"> Reach Out To Us</button>
+            </div>
+            <div class=" container px-5 py-32 mx-auto flex md:items-center lg:items-start md:flex-row md:flex-no-wrap flex-wrap flex-col">
+              <div class="w-64 flex-shrink-0 md:mx-0 mx-auto text-center md:text-left md:mt-0 mt-10">
+                <img class="-mt-2" src="../public/img/vinci-logo.png" alt="">
+              </div>
+              <div class="flex-grow flex flex-wrap md:pr-20 -mb-10 md:text-left text-center order-first">
+                <div class="lg:w-1/4 md:w-1/2 w-full px-4">
+                  <h2 class="title-font font-medium text-gray-900 tracking-widest text-sm mb-3"></h2>
+                  <nav class="list-none mb-10 -mt-24">
+                    <li>
+                      <a class="text-primary-600 hover:text-gray-800 cursor-pointer" href="/about">ABOUT</a>
+                    </li>
+                    <li>
+                      <a class="text-primary-600 hover:text-gray-800 cursor-pointer" href="/services">SOLUTIONS</a>
+                    </li>
+                    <li>
+                      <a class="text-primary-600 hover:text-gray-800 cursor-pointer" href="/partners">PARTNERS</a>
+                    </li>
+                    <li>
+                      <a class="text-primary-600 hover:text-gray-800 cursor-pointer" href="/careers">CAREERS</a>
+                    </li>
+                    <li>
+                      <a class="text-primary-600 hover:text-gray-800 cursor-pointer" href="/blogs">BLOGS</a>
+                    </li>
+                    <li>
+                      <a class="text-primary-600 hover:text-gray-800 cursor-pointer" href=/contact"">CONTACT</a>
+                    </li>
+                  </nav>
+                </div>
+              </div>
+            </div>
+          </footer>
+       </section>
+
+
    </section>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.4.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.4.2/ScrollTrigger.min.js"></script>
