--- a/views/services.hbs
+++ b/views/services.hbs
@@ -46,7 +46,7 @@
 
       <section class="panel bg-secondary">
         <section class="  text-lg p-12 bg-secondary md:p-20 lg:p-20">
-          <h1 class="text-4xl text-left py-4 mx-4">Educate Your Workforce Like Never Before</h1>
+          <h2 class="text-4xl text-left py-4 mx-4 font-sans">Educate Your Workforce Like Never Before</h2>
           <hr class=" w-3/4 py-4 font-thin mx-4">
           <section class="tracking-widest text-left mx-4">
             <p>
@@ -67,9 +67,9 @@
       <section class="panel bg-secondary">
         <section class="authoring lg:flex m-auto md:p-20 lg:p-20">
           <section class=" ">
-            <h1 class="text-3xl font-black uppercase py-4 text-left">Codex Authoring</h1>
+            <h2 class="text-3xl font-semibold uppercase py-4 text-left font-sans">Codex Authoring</h2>
             <hr>
-            <h4 class="text-xl font-semibold my-4">Fully Customize Your Simulations</h4>
+            <h4 class="text-xl font-medium my-4">Fully Customize Your Simulations</h4>
             <ul>
               <li class="tracking-wider leading-loose">
                 Fully customize simulations, such as interactions, instructional content, and training manuals as easily as Powerpoint.
@@ -90,9 +90,9 @@
       <section class="panel bg-secondary">
         <section class="authoring lg:flex m-auto md:p-20 lg:p-20">
           <section class=" ">
-            <h1 class="text-3xl font-black uppercase py-4 text-left">Codex Simulator</h1>
+            <h1 class="text-3xl font-semibold uppercase py-4 text-left font-sans">Codex Simulator</h1>
             <hr>
-            <h4 class="text-xl font-semibold my-4">Highly Realistic, Interactive VR</h4>
+            <h4 class="text-xl font-medium my-4">Highly Realistic, Interactive VR</h4>
             <ul>
               <li class="tracking-wider leading-loose">
                 Train in highly Realistic 3D environments of simulations created in Codex Authoring.
@@ -114,9 +114,9 @@
         <section class="panel bg-secondary">
           <section class="authoring lg:flex m-auto md:p-20 lg:p-20">
             <section class=" ">
-              <h1 class="text-3xl font-black uppercase py-4 text-left">Codex Analytics</h1>
+              <h1 class="text-3xl font-semibold uppercase py-4 text-left font-sans">Codex Analytics</h1>
               <hr>
-              <h4 class="text-xl font-semibold my-4">Robust Data Analytics</h4>
+              <h4 class="text-xl font-medium my-4">Robust Data Analytics</h4>
               <ul>
                 <li class="tracking-wider leading-loose">
                     Live stream multiple student views as they train in VR.
@@ -137,8 +137,8 @@
       <section class="panel bg-secondary">
         <section class="leverage m-auto p-12 lg:px-12 lg:flex ">
           <section class=" ">
-            <h1 class="text-3xl font-black uppercase text-center mb-10">Why Codex</h1>
-            <h2 class="text-2xl font-bold ">Leverage low-cost VR
+            <h1 class="text-3xl font-semibold uppercase text-center mb-10 font-sans">Why Codex</h1>
+            <h2 class="text-2xl font-semibold font-sans ">Leverage low-cost VR
               <hr class="w-3/4 py-4 font-thin">
             </h2>
             <ul>
@@ -159,7 +159,7 @@
       <section class="panel bg-secondary">
         <section class="leverage m-auto p-12 lg:flex">
           <section class=" ">
-            <h2 class="text-2xl font-bold sm:my-8">Personalized and Relevant Content
+            <h2 class="text-2xl font-semibold sm:my-8 font-sans">Personalized and Relevant Content
               <hr class="w-3/4 py-4 font-thin">
             </h2>
             <ul>
@@ -177,7 +177,7 @@
       <section class="panel bg-secondary">
         <section class="leverage m-auto p-12 lg:flex">
           <section class=" ">
-            <h2 class="text-2xl font-bold sm:my-8 text-left">Scalable Collaboration
+            <h2 class="text-2xl font-semibold sm:my-8 text-left font-sans">Scalable Collaboration
               <hr class="w-3/4 py-4 font-thin">
             </h2>
             <ul>
@@ -199,7 +199,7 @@
          <section class="text-gray-700 body-font relative">
            <div class="container px-5 py-24 mx-auto flex sm:flex-no-wrap flex-wrap">
                <div class="bg-opacity-75 lg:w-2/3 md:w-1/2 flex flex-col md:ml-auto w-full md:py-8 mt-8 md:mt-0">
-                 <h2 class="text-primary text-3xl mb-1 font-medium title-font text-left">Contact VINCI</h2>
+                 <h2 class="text-primary text-3xl mb-1 font-semibold title-font text-left font-sans">Contact VINCI</h2>
                  <hr class="w-4/5 mb-8">
                  <input class="w-4/5 opacity-75 bg-white border border-gray-400 focus:outline-none focus:border-indigo-500 text-base px-4 py-2 mb-4" placeholder="Name" type="text">
                  <input class="w-4/5 opacity-75 bg-white border border-gray-400 focus:outline-none focus:border-indigo-500 text-base px-4 py-2 mb-4 mt-2" placeholder="Email" type="email">
@@ -218,6 +218,47 @@
            </section>
          </section>
         </section>
+      </section>
+
+      <section class="bg-secondary panel">
+         <footer class="bg-secondary bg-bottom bg-cover text-primary body-font  p-4 md:mt-24 lg:mt-24" style="background-image: url('../public/img/contactbckgrnd.png')">
+           <h1 class ="text-primary text-center sm:text-4xl text-3xl font-sans">Want to Learn More About VR Training?</h1>
+           <div class="flex flex-col justify-center mt-24">
+           <button class="w-1/5 mx-auto text-white border-sloid border-2 py-2 px-6 focus:outline-none hover:bg-red-600 text-lg">Check Out Our Blogs</button>
+           <p class="mx-auto text-Center text-2xl text-primary text-semibold">-or-</p>
+           <button class=" w-1/5 mx-auto text-white border-sloid border-2 py-2 px-6 focus:outline-none hover:bg-red-600 text-lg">Reach Out To Us</button>
+           </div>
+           <div class=" container px-5 py-32 mx-auto flex md:items-center lg:items-start md:flex-row md:flex-no-wrap flex-wrap flex-col">
+             <div class="w-64 flex-shrink-0 md:mx-0 mx-auto text-center md:text-left md:mt-0 mt-10">
+               <img class="-mt-2" src="../public/img/vinci-logo.png" alt="">
+             </div>
+             <div class="flex-grow flex flex-wrap md:pr-20 -mb-10 md:text-left text-center order-first">
+               <div class="lg:w-1/4 md:w-1/2 w-full px-4">
+                 <h2 class="title-font font-medium text-gray-900 tracking-widest text-sm mb-3"></h2>
+                 <nav class="list-none mb-10 -mt-24">
+                   <li>
+                     <a class="text-primary-600 hover:text-gray-800 cursor-pointer" href="/about">ABOUT</a>
+                   </li>
+                   <li>
+                     <a class="text-primary-600 hover:text-gray-800 cursor-pointer" href="/services">SOLUTIONS</a>
+                   </li>
+                   <li>
+                     <a class="text-primary-600 hover:text-gray-800 cursor-pointer" href="/partners">PARTNERS</a>
+                   </li>
+                   <li>
+                     <a class="text-primary-600 hover:text-gray-800 cursor-pointer" href="/careers">CAREERS</a>
+                   </li>
+                   <li>
+                     <a class="text-primary-600 hover:text-gray-800 cursor-pointer" href="/blogs">BLOGS</a>
+                   </li>
+                   <li>
+                     <a class="text-primary-600 hover:text-gray-800 cursor-pointer" href=/contact"">CONTACT</a>
+                   </li>
+                 </nav>
+               </div>
+             </div>
+           </div>
+         </footer>
       </section>
 
 
