--- a/public/css/about.css
+++ b/public/css/about.css
@@ -107,10 +107,10 @@ body{
     border: 1px solid black;
     background: #c4c4c4;
     position: absolute;
-    opacity: 0.8;
     left: 775px;
     top: 175px;
-    height: 250px;
+    height: 275px;
+    max-height: 300px;
     width: 230px;
 }
 
