--- a/views/blogs.hbs
+++ b/views/blogs.hbs
@@ -35,8 +35,8 @@
 
 				<section class="text-primary bg-secondary overflow-display">
 				  <div class="container px-5 py-24 mx-auto bg-secondary overflow-display">
-						<h1 class="text-4xl font-sans font-bold">VINCI Blogs</h1>
-						<h4 class="text-2xl font-sans text-gray-500 mb-12">Learn more about XR and its applications</h4>
+						<h1 class="text-left tracking-wider p-4 mt-48 ml-24 sm:text-4xl md:text-4xl xlg:text-4xl font-sans font-semibold">VINCI Blogs</h1>
+						<h4 class="tracking-widest text-left p-4 ml-242">Learn more about XR and its applications</h4>
 				    <div class="flex flex-wrap -m-4">
 							<!-- blog1 -->
 				      <div class="p-4 md:w-1/3">
@@ -130,7 +130,7 @@
 				==================-->
 
 				<section class="bg-secondary">
-           <footer class="bg-secondary bg-bottom bg-cover text-primary body-font mt-24 p-4 lg:mt-64" style="background-image: url('../public/img/contactbckgrnd.png')">
+           <footer class="bg-secondary bg-bottom bg-cover text-primary body-font mt-24 p-4" style="background-image: url('../public/img/contactbckgrnd.png')">
              <h1 class ="text-primary text-center sm:text-4xl text-3xl">Want to Learn More About VR Training?</h1>
              <div class="flex flex-col justify-center mt-24">
              <button class="w-1/5 mx-auto text-white border-sloid border-2 py-2 px-6 focus:outline-none hover:bg-red-600 text-lg">Check Out Our Blogs</button>
