--- a/views/careers.hbs
+++ b/views/careers.hbs
@@ -40,13 +40,12 @@
         =====================-->
         <!-- <section class="contents mt-24 w-full p-4 absolute">
        -->
-       <section class="hero-text w-full p-4 absolute z-1 sm:mt-32 md:mt-40">
+       <section class="">
             <!-- <div class="overlay w-full h-screen" style="position:absolute; top:0; left:0;  min-width:100%; min-height:100vh; background-color:rgba(0,0,0,0.2); z-index:0;"></div> -->
-            <hr class="mt-4 w-1/3 mx-auto p-2">
-            <h1 class="text-center uppercase font-sans font-black -mb-20 -mt-6 p-4 sm:text-6xl md:text-5xl xlg:text-6xl">Careers
+            <h1 class="text-4xl uppercase text-center tracking-wider p-2 mt-48 font-sans font-semibold sm:text-4xl md:text-4xl xlg:text-4xl">Careers
             </h1>
-            <hr class="mt-20 w-1/3 mx-auto">
-            <p class="text-center text-lg font-bold z-10">Join the VINCI team</p>
+            <hr class="coverHr w-1/4 center mx-auto">
+            <p class="tracking-widest text-center pt-1 font-serif">Join the VINCI team</p>
              <p class="down-arrow sm:text-6xl my-32 text-center">⌄</p>
             <!-- <img src="" alt=""> -->
         </section>
@@ -57,7 +56,7 @@
       ==================-->
       <section class="panel bg-secondary h-full">
         <section class="bg-secondary text-2xl sm:p-12 overflow-auto">
-            <h1 class="text-4xl font-bold p-4">Join Our Team
+            <h1 class="text-4xl font-bold p-4 font-sans">Join Our Team
               <hr class="mt-4 w-1/6 py-2 mb-20">
             </h1>
 
@@ -109,7 +108,7 @@
 
 
       <section class="bg-secondary panel">
-         <footer class="bg-secondary bg-bottom bg-cover text-primary body-font mt-24 p-4 lg:mt-64" style="background-image: url('../public/img/contactbckgrnd.png')">
+         <footer class="bg-secondary bg-bottom bg-cover text-primary body-font mt-24 p-4" style="background-image: url('../public/img/contactbckgrnd.png')">
            <h1 class ="text-primary text-center sm:text-4xl text-3xl">Want to Learn More About VR Training?</h1>
            <div class="flex flex-col justify-center mt-24">
            <button class="w-1/5 mx-auto text-white border-sloid border-2 py-2 px-6 focus:outline-none hover:bg-red-600 text-lg">Check Out Our Blogs</button>
@@ -146,31 +145,6 @@
                </div>
              </div>
            </div>
-           <!-- <div class="bg-gray-200">
-             <div class="container mx-auto py-4 px-5 flex flex-wrap flex-col sm:flex-row">
-               <p class="text-gray-500 text-sm text-center sm:text-left">© 2020 VINCI-VR —
-                 <a href="" rel="noopener noreferrer" class="text-gray-600 ml-1" target="_blank">@tresstudios</a>
-               </p>
-               <span class="inline-flex sm:ml-auto sm:mt-0 mt-2 justify-center sm:justify-start">
-                 <a class="text-gray-500">
-                   <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
-                     <path d="M18 2h-3a5 5 0 00-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 011-1h3z"></path>
-                   </svg>
-                 </a>
-                 <a class="ml-3 text-gray-500">
-                   <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
-                     <path d="M23 3a10.9 10.9 0 01-3.14 1.53 4.48 4.48 0 00-7.86 3v1A10.66 10.66 0 013 4s-4 9 5 13a11.64 11.64 0 01-7 2c9 5 20 0 20-11.5a4.5 4.5 0 00-.08-.83A7.72 7.72 0 0023 3z"></path>
-                   </svg>
-                 </a>
-                 <a class="ml-3 text-gray-500">
-                   <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
-                     <rect width="20" height="20" x="2" y="2" rx="5" ry="5"></rect>
-                     <path d="M16 11.37A4 4 0 1112.63 8 4 4 0 0116 11.37zm1.5-4.87h.01"></path>
-                   </svg>
-                 </a>
-               </span>
-             </div>
-           </div> -->
          </footer>
       </section>
     </section>
