--- a/views/indexnew.hbs
+++ b/views/indexnew.hbs
@@ -12,7 +12,6 @@
   <body class="text-primary bg-secondary font-serif">
     <section id="container" class="main-wrapper overflow-x-hidden">
 
-      <section class="panel">
         <section class="hero-section text-center h-screen w-full">
           <!--==================
            NAV SECTION
@@ -51,7 +50,7 @@
              <h1 class="font-sans font-black -mb-20 -mt-6 sm:text-4xl md:text-4xl"> WITH A WORLD OF YOUR OWN
               <hr class=" w-1/3 mx-auto mb-10">
             </h1>
-           <h3 class="pt-12 sm:my-8 sm:text-xl md:text-xl xlg:text-2xl ">Create, Analyze, and Train in <b class="bold">Virtual Reality</b></h3>
+           <h3 class="font-serif pt-12 sm:my-8 sm:text-xl md:text-xl xlg:text-2xl ">Create, Analyze, and Train in <b class="bold">Virtual Reality</b></h3>
     ​
            <a id="learnMoreIntro" class="btn uppercase border p-4 hover:bg-gray-100 hover:opacity-3 hover:text-gray-600 sm:text-sm md:text-sm lg:text-sm" href="/services">Learn about our services</a>
     ​
@@ -263,14 +262,16 @@
         </section>
       </section>
 
+
+
+      <!--==================
+       FOOTER/CONTACT SECTION
+      ==================-->
       <section class="panel">
-        <!--==================
-         FOOTER/CONTACT SECTION
-        ==================-->
 
         <section class="bg-secondary panel">
            <footer class="bg-secondary bg-bottom bg-cover text-primary body-font mt-24 p-4" style="background-image: url('../public/img/contactbckgrnd.png')">
-             <h1 class ="text-primary text-center sm:text-4xl text-3xl">Want to Learn More About VR Training?</h1>
+             <h1 class ="text-primary text-center sm:text-4xl text-3xl font-sans">Want to Learn More About VR Training?</h1>
              <div class="flex flex-col justify-center mt-24">
              <button class="w-1/5 mx-auto text-white border-sloid border-2 py-2 px-6 focus:outline-none hover:bg-red-600 text-lg">Check Out Our Blogs</button>
              <p class="mx-auto text-Center text-2xl text-primary text-semibold">-or-</p>
