--- a/views/partners.hbs
+++ b/views/partners.hbs
@@ -25,7 +25,7 @@
             </div>
         </header>
         <hr class="-mt-4">
-          <h1 class="text-left tracking-wider p-4 mt-48 ml-24 sm:text-6xl md:text-5xl xlg:text-6xl">PARTNERS</h1>
+          <h1 class="text-left tracking-wider p-4 mt-48 ml-24 sm:text-4xl md:text-4xl xlg:text-4xl font-sans font-semibold">PARTNERS</h1>
           <div class="tracking-widest text-left p-4 ml-24">
             <p>See how VINCI is changing </p>
             <p>training today.</p>
@@ -110,7 +110,7 @@
       <!-- - - - - - - - - SafetyDNA VR ---------------->
         <section class="mb-4 panel background second">
           <section class="text-primary body-font">
-            <h1 class="text-primary text-center sm:text-4xl text-3xl mt-10 -mb-10">SafetyDNA VR</h1>
+            <h1 class="text-primary text-center sm:text-4xl text-3xl mt-10 -mb-10 font-sans">SafetyDNA VR</h1>
             <section class="text-gray-700 body-font">
                <div class="container mx-auto flex px-5 py-24 md:flex-row flex-col items-center">
                  <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6 mb-10 md:mb-0 mt-4">
@@ -136,8 +136,8 @@
 
 
        <section class="bg-secondary panel">
-          <footer class="bg-secondary bg-bottom bg-cover text-primary body-font mt-24 p-4 lg:mt-64" style="background-image: url('../public/img/contactbckgrnd.png')">
-            <h1 class ="text-primary text-center sm:text-4xl text-3xl">Want to Learn More About VR Training?</h1>
+          <footer class="bg-secondary bg-bottom bg-cover text-primary body-font mt-24 p-4" style="background-image: url('../public/img/contactbckgrnd.png')">
+            <h1 class ="text-primary text-center sm:text-4xl text-3xl font-sans">Want to Learn More About VR Training?</h1>
             <div class="flex flex-col justify-center mt-24">
             <button class="w-1/5 mx-auto text-white border-sloid border-2 py-2 px-6 focus:outline-none hover:bg-red-600 text-lg">Check Out Our Blogs</button>
             <p class="mx-auto text-Center text-2xl text-primary text-semibold">-or-</p>
@@ -173,31 +173,6 @@
                 </div>
               </div>
             </div>
-            <!-- <div class="bg-gray-200">
-              <div class="container mx-auto py-4 px-5 flex flex-wrap flex-col sm:flex-row">
-                <p class="text-gray-500 text-sm text-center sm:text-left">© 2020 VINCI-VR —
-                  <a href="" rel="noopener noreferrer" class="text-gray-600 ml-1" target="_blank">@tresstudios</a>
-                </p>
-                <span class="inline-flex sm:ml-auto sm:mt-0 mt-2 justify-center sm:justify-start">
-                  <a class="text-gray-500">
-                    <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
-                      <path d="M18 2h-3a5 5 0 00-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 011-1h3z"></path>
-                    </svg>
-                  </a>
-                  <a class="ml-3 text-gray-500">
-                    <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
-                      <path d="M23 3a10.9 10.9 0 01-3.14 1.53 4.48 4.48 0 00-7.86 3v1A10.66 10.66 0 013 4s-4 9 5 13a11.64 11.64 0 01-7 2c9 5 20 0 20-11.5a4.5 4.5 0 00-.08-.83A7.72 7.72 0 0023 3z"></path>
-                    </svg>
-                  </a>
-                  <a class="ml-3 text-gray-500">
-                    <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
-                      <rect width="20" height="20" x="2" y="2" rx="5" ry="5"></rect>
-                      <path d="M16 11.37A4 4 0 1112.63 8 4 4 0 0116 11.37zm1.5-4.87h.01"></path>
-                    </svg>
-                  </a>
-                </span>
-              </div>
-            </div> -->
           </footer>
        </section>
   </section>
