adding imaged to partners page

--- a/views/indexnew.hbs
+++ b/views/indexnew.hbs
@@ -12,7 +12,7 @@
   <body class="text-primary bg-secondary font-serif">
     <section id="container" class="main-wrapper overflow-x-hidden">
 
-        <section class="hero-section text-center h-screen w-full">
+        <section class="hero-section panel text-center h-screen w-full">
           <!--==================
            NAV SECTION
           ==================-->
@@ -58,7 +58,6 @@
           </section>
 
         </section>
-      </section>
 
 
       <!--==================
