--- a/public/css/partners.css
+++ b/public/css/partners.css
@@ -2,6 +2,13 @@ body{
 
 }
 
+.hero-section {
+  background-image: url("../img/partners-hero-img.png");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
 #container {
   width: 100%;
   height: 100%;
@@ -24,17 +31,27 @@ body{
 }
 
 .first{
-  background: -webkit-linear-gradient(110deg, #191919 60%, #5e5c5c 60%);
-  background: -o-linear-gradient(110deg, #191919 60%, #5e5c5c 60%);
-  background: -moz-linear-gradient(110deg, #191919 60%, #5e5c5c 60%);
-  background: linear-gradient(110deg, #191919 60%, #5e5c5c 60%);
+      color: #fff;
+      background: -webkit-linear-gradient(-110deg, #191919 60%, rgba(0, 0, 0, 0) 40%), url('https://images.unsplash.com/photo-1562361226-6a0a40ef3718?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=600&q=60');
+      background: -o-linear-gradient(-110deg, #191919 60%, rgba(0, 0, 0, 0) 40%), url('https://images.unsplash.com/photo-1562361226-6a0a40ef3718?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=600&q=60');
+      background: -moz-linear-gradient(-110deg, #191919 60%, rgba(0, 0, 0, 0) 40%), url('https://images.unsplash.com/photo-1562361226-6a0a40ef3718?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=600&q=60');
+      background: linear-gradient(-110deg, #191919 60%, rgba(0, 0, 0, 0) 40%), url('https://images.unsplash.com/photo-1562361226-6a0a40ef3718?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=600&q=60');
+      background-size: contain;
+      background-repeat: no-repeat;
+      background-position: ;
+      text-align: right;
+      object-fit: cover;
 }
 
 .second{
-  background: -webkit-linear-gradient(70deg, #191919 40%, #5e5c5c 40%);
-  background: -o-linear-gradient(70deg, #191919 40%, #5e5c5c 40%);
-  background: -moz-linear-gradient(70deg, #191919 40%, #5e5c5c 40%);
-  background: linear-gradient(70deg, #191919 40%, #5e5c5c 40%);
+      color: #fff;
+      background: -webkit-linear-gradient(-110deg, #191919 60%, rgba(0, 0, 0, 0) 40%), url('https://www.nasa.gov/sites/default/files/thumbnails/image/pia21421-cr.jpg');
+      background: -o-linear-gradient(-110deg, #191919 60%, rgba(0, 0, 0, 0) 40%), url('https://www.nasa.gov/sites/default/files/thumbnails/image/pia21421-cr.jpg');
+      background: -moz-linear-gradient(-110deg, #191919 60%, rgba(0, 0, 0, 0) 40%), url('https://www.nasa.gov/sites/default/files/thumbnails/image/pia21421-cr.jpg');
+      background: linear-gradient(-110deg, #191919 60%, rgba(0, 0, 0, 0) 40%), url('https://www.nasa.gov/sites/default/files/thumbnails/image/pia21421-cr.jpg');
+    background-size: cover;
+    background-position: 50% 20%;
+    text-align: right;
 }
 
 .third{
