--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -25,8 +25,8 @@
               </div>
           </header>
           <hr class="-mt-4">
-          <h1 class="text-left tracking-wider p-4 mt-48 ml-24 sm:text-4xl md:text-4xl xlg:text-4xl font-sans font-semibold">CONTACT</h1>
-          <div class="tracking-widest text-left p-4 ml-24">
+          <h1 class="text-left tracking-wider p-4 mt-50 -mb-4 ml-50 sm:text-4xl md:text-4xl xlg:text-4xl uppercase font-sans font-semibold">CONTACT</h1>
+          <div class="tracking-widest text-left p-4 ml-50">
             <p>Have any questions?</p>
             <p>Drop us a message.</p>
             <p>Book a demo.</p>
