--- a/views/partners.hbs
+++ b/views/partners.hbs
@@ -8,7 +8,7 @@
   </head>
   <body class="font-serif">
     <section id = "container" class="background">
-      <section id="cover" class="bg-bottom bg-cover bg-opacity-75 text-primary panel background cover overflow-hidden" style="background-image: url('../public/img/partners-hero-img.png')">
+      <section id="cover" class="hero-section text-primary panel background cover overflow-hidden">
         <header class="text-gray-700 body-font ">
             <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
               <a href="/" class="flex items-center mb-4 md:mb-0">
@@ -25,21 +25,21 @@
             </div>
         </header>
         <hr class="-mt-4">
-          <h1 class="text-left tracking-wider p-4 mt-48 ml-24 sm:text-4xl md:text-4xl xlg:text-4xl font-sans font-semibold">PARTNERS</h1>
-          <div class="tracking-widest text-left p-4 ml-24">
+          <h1 class="text-left tracking-wider p-4 mt-50 -mb-4 ml-50 sm:text-4xl md:text-4xl xlg:text-4xl font-sans font-semibold">PARTNERS</h1>
+          <div class="tracking-widest text-left p-4 ml-50">
             <p>See how VINCI is changing </p>
             <p>training today.</p>
           </div>
        </section>
 
        <!-- - - - - - - - - Airforce ---------------->
-       <section class="mb-4 panel background second">
+       <section class="mb-4 panel background first">
           <section class="text-primary body-font">
             <h1 class="text-primary text-center sm:text-4xl text-3xl mt-10 -mb-16 font-sans">Air Craft Maintenance</h1>
             <section class="text-gray-700 body-font">
                <div class="container mx-auto flex px-5 py-24 md:flex-row flex-col items-center">
                  <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6 mb-10 md:mb-0 mt-4">
-                   <img class="object-cover object-center rounded p-4" alt="hero" src="../public/img/chopper.png">
+                   <img class="object-cover object-center rounded p-4" alt="" src="../public/img/chopper">
                  </div>
                  <div class="lg:flex-grow md:w-1/2 p-12 flex flex-col md:items-start md:text-left items-center text-center">
                    <h1 class="title-font sm:text-2xl text-3xl mb-4 font-medium text-primary"><span>Client</span>
@@ -65,7 +65,7 @@
             <section class="text-gray-700 body-font">
                <div class="container mx-auto flex px-5 py-24 md:flex-row flex-col items-center">
                  <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6 mb-10 md:mb-0 mt-4">
-                   <img class="object-cover object-center rounded p-4" alt="hero" src="../public/img/windturbine.jpg">
+                   <img class="object-cover object-center rounded p-4" alt="hero" src="../public/img/windturbine">
                  </div>
                  <div class="lg:flex-grow md:w-1/2 p-12 flex flex-col md:items-start md:text-left items-center text-center">
                    <h1 class="title-font sm:text-2xl text-3xl mb-4 font-medium text-primary"><span>Client </span>
