--- a/views/services.hbs
+++ b/views/services.hbs
@@ -36,8 +36,8 @@
           <hr class="-mt-4">
 
 
-            <h1 class="text-left tracking-wider p-4 mt-48 ml-24 sm:text-4xl md:text-4xl xlg:text-4xl uppercase font-sans font-semibold">Codex</h1>
-            <div class="tracking-widest text-left p-4 ml-24">
+            <h1 class="text-left tracking-wider p-4 mt-50 -mb-4 ml-50 sm:text-4xl md:text-4xl xlg:text-4xl uppercase font-sans font-semibold">Codex</h1>
+            <div class="tracking-widest text-left p-4 ml-50">
               <p>Access the entire codex suite or</p>
               <p>pick and choose which toolkits to use.</p>
             </div>
