--- a/views/about.hbs
+++ b/views/about.hbs
@@ -83,8 +83,9 @@
                   <p class="lg:w-2/3 mx-auto leading-relaxed text-base text-primary">Click an image to learn more about our team members.</p>
                 </div>
                 <div class="flex flex-wrap -m-2">
+
                   <div class="p-2 lg:w-1/3 md:w-1/2 w-full">
-                    <div class="h-full flex items-center border-gray-200 border p-4 rounded-lg">
+                    <div class="modalBlock h-full flex items-center border-gray-200 border p-4 rounded-lg">
                       <img id="myImg" alt="" class="myImages w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="../public/img/eagle.png">
                       <div id="myModal" class="modal">
                         <span class="close">&times;</span>
@@ -106,8 +107,9 @@
                       </div>
                     </div>
                   </div>
+
                   <div class="p-2 lg:w-1/3 md:w-1/2 w-full">
-                    <div class="h-full flex items-center border-gray-200 border p-4 rounded-lg">
+                    <div class="modalBlock h-full flex items-center border-gray-200 border p-4 rounded-lg">
                       <img id="myImg" alt="" class="myImages w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="../public/img/tim.png">
                       <div id="myModal" class="modal">
                         <span class="close">&times;</span>
@@ -115,8 +117,8 @@
                         <div class="bio p-2">
                           <h2 class="text-left text-lg mt-2 mb-2">Tim Clancy</h2>
                           <hr>
-                          <h5 class="text-left text-sm">Enterpreneurship @Babson College</h5>
-                          <h5 class="text-left text-sm">Winner, Money 20/20 Global Hackathon</h5>
+                          <h5 class="text-left text-sm">Blah Blah Balah </h5>
+                          <h5 class="text-left text-sm">1234567789</h5>
                           <hr>
                           <p class="text-xs text-left mt-2">
                               Modern virtual reality headset displays are based on technology developed for smartphones including: gyroscopes and motion sensors for tracking head, body, and hand positions; small HD screens for stereoscopic displays; and small, lightweight and fast computer processors.
@@ -130,7 +132,7 @@
                     </div>
                   </div>
                   <div class="p-2 lg:w-1/3 md:w-1/2 w-full">
-                    <div class="h-full flex items-center border-gray-200 border p-4 rounded-lg">
+                    <div class="modalBlock h-full flex items-center border-gray-200 border p-4 rounded-lg">
                       <img id="myImg" alt="team" class="myImages w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="../public/img/liam.png">
                       <div class="flex-grow">
                         <h2 class="text-primary title-font font-medium">john doe</h2>
@@ -139,7 +141,7 @@
                     </div>
                   </div>
                   <div class="p-2 lg:w-1/3 md:w-1/2 w-full">
-                    <div class="h-full flex items-center border-gray-200 border p-4 rounded-lg">
+                    <div class="modalBlock h-full flex items-center border-gray-200 border p-4 rounded-lg">
                       <img id="myImg" alt="team" class="myImages w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="../public/img/matt.png">
                       <div class="flex-grow">
                         <h2 class="text-primary title-font font-medium">John Doe</h2>
@@ -148,7 +150,7 @@
                     </div>
                   </div>
                   <div class="p-2 lg:w-1/3 md:w-1/2 w-full">
-                    <div class="h-full flex items-center border-gray-200 border p-4 rounded-lg">
+                    <div class="modalBlock h-full flex items-center border-gray-200 border p-4 rounded-lg">
                       <img id="myImg" alt="team" class="myImages w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="../public/img/img1.png">
                       <div class="flex-grow">
                         <h2 class="text-primary title-font font-medium">john doe</h2>
@@ -157,7 +159,7 @@
                     </div>
                   </div>
                   <div class="p-2 lg:w-1/3 md:w-1/2 w-full">
-                    <div class="h-full flex items-center border-gray-200 border p-4 rounded-lg">
+                    <div class="modalBlock h-full flex items-center border-gray-200 border p-4 rounded-lg">
                       <img id="myImg" alt="team" class="myImages w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="../public/img/dawson.png">
                       <div class="flex-grow">
                         <h2 class="text-primary title-font font-medium">john doe</h2>
