--- a/views/services.hbs
+++ b/views/services.hbs
@@ -66,7 +66,7 @@
 
       <section class="panel bg-secondary">
         <section class="authoring lg:flex m-auto md:p-20 lg:p-20">
-          <section class=" ">
+          <section class="-ml-2 w-2/3">
             <h2 class="text-3xl font-semibold uppercase py-4 text-left font-sans">Codex Authoring</h2>
             <hr>
             <h4 class="text-xl font-medium my-4">Fully Customize Your Simulations</h4>
@@ -82,14 +82,16 @@
               </li>
             </ul>
           </section>
-          <img class="p-20 " src="../public/img/codexscreenshot.jpg" alt="codex authoring">
+          <div class="imgSize1">
+            <!--IMG IS IN THE CSS BCKGRND -->
+          </div>
         </section>
       </section>
 
 
       <section class="panel bg-secondary">
         <section class="authoring lg:flex m-auto md:p-20 lg:p-20">
-          <section class=" ">
+          <section class="-ml-2 w-2/3">
             <h1 class="text-3xl font-semibold uppercase py-4 text-left font-sans">Codex Simulator</h1>
             <hr>
             <h4 class="text-xl font-medium my-4">Highly Realistic, Interactive VR</h4>
@@ -104,8 +106,10 @@
                 Utilize pre-existing 3D models or access VINCI’s 3D model library and world class modeling service.
               </li>
             </ul>
-          </section>
-          <img class="p-16 w-11/12 " src="../public/img/SimulatorScreenshot.png" alt="codex authoring">
+         </section>
+          <div class="imgSize2">
+            <!--IMG IS IN THE CSS BCKGRND -->
+          </div>
         </section>
       </section>
 
@@ -113,7 +117,7 @@
 
         <section class="panel bg-secondary">
           <section class="authoring lg:flex m-auto md:p-20 lg:p-20">
-            <section class=" ">
+            <section class="-ml-2 w-2/3 ">
               <h1 class="text-3xl font-semibold uppercase py-4 text-left font-sans">Codex Analytics</h1>
               <hr>
               <h4 class="text-xl font-medium my-4">Robust Data Analytics</h4>
@@ -129,14 +133,16 @@
                 </li>
               </ul>
             </section>
-            <img class="p-12 w-4/5 mt-4" src="../public/img/analyticsscreenshot.png" alt="codex analytics">
+            <div class="imgSize3">
+              <!--IMG IS IN THE CSS BCKGRND -->
+            </div>
           </section>
         </section>
 
 
       <section class="panel bg-secondary">
         <section class="leverage m-auto p-12 lg:px-12 lg:flex ">
-          <section class=" ">
+          <section class=" -ml-2 w-2/3">
             <h1 class="text-3xl font-semibold uppercase text-center mb-10 font-sans">Why Codex</h1>
             <h2 class="text-2xl font-semibold font-sans ">Leverage low-cost VR
               <hr class="w-3/4 py-4 font-thin">
@@ -174,9 +180,10 @@
           <img class="lg:w-1/2 pl-4" src="https://images.unsplash.com/photo-1592478411213-6153e4ebc07d?ixlib=rb-1.2.1&auto=format&fit=crop&w=1000&q=80" alt="VR simulation">
         </section>
       </section>
+
       <section class="panel bg-secondary">
         <section class="leverage m-auto p-12 lg:flex">
-          <section class=" ">
+          <section class="-ml-2 w-2/3 ">
             <h2 class="text-2xl font-semibold sm:my-8 text-left font-sans">Scalable Collaboration
               <hr class="w-3/4 py-4 font-thin">
             </h2>
