--- a/public/css/services.css
+++ b/public/css/services.css
@@ -14,3 +14,28 @@ nav li {
   list-style: none;
   padding-bottom: 0;
 }
+
+.imgSize1{
+  background: red;
+  background-image: url("../img/analyticsscreenshot.png");
+  background-size: cover;
+  border-radius: 1%;
+  height:   20rem;
+  margin-top:  4.5rem;
+  margin-left: 0.5rem;
+  padding-left: 1.5rem;
+  width: 50rem;
+  overflow: hidden;
+}
+
+.imgSize2{
+  background: red;
+  background-image: url("../img/SimulatorScreenshot.png");
+  background-size: cover;
+  height:   20rem;
+  margin-top:  4.5rem;
+  margin-left: 0.5rem;
+  padding-left: 1.5rem;
+  width: 50rem;
+  overflow: hidden;
+}
