--- a/views/partners.hbs
+++ b/views/partners.hbs
@@ -35,16 +35,18 @@
        <!-- - - - - - - - - Airforce ---------------->
        <section class="mb-4 panel background first">
           <section class="text-primary body-font">
-            <h1 class="text-primary text-center sm:text-4xl text-3xl mt-10 -mb-16 font-sans">Air Craft Maintenance</h1>
+            <h1 class="text-primary text-center font-semibold sm:text-4xl text-3xl mt-10 -mb-16 font-sans">Air Craft Maintenance</h1>
             <section class="text-gray-700 body-font">
-               <div class="container mx-auto flex px-5 py-24 md:flex-row flex-col items-center">
+               <div class="container mx-auto flex px-5 py-10 md:flex-row flex-col items-center">
                  <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6 mb-10 md:mb-0 mt-4">
-                   <img class="object-cover object-center rounded p-4" alt="" src="../public/img/chopper">
+                    <!--EMPTY DIV FOR SPACE -->
                  </div>
                  <div class="lg:flex-grow md:w-1/2 p-12 flex flex-col md:items-start md:text-left items-center text-center">
-                   <h1 class="title-font sm:text-2xl text-3xl mb-4 font-medium text-primary"><span>Client</span>
-                     <span class="hidden lg:inline-block ml-48">Platform </span>
-                   </h1>
+                   <h2 class="title-font sm:text-2xl text-3xl mb-4 font-medium text-primary">
+                     <span>Client</span>
+                     <span class="ml-48">Platform </span>
+                   </h2>
+
                    <p class="mb-8 leading-relaxed text-primary">Air Force Instructors struggle to ensure their airmen are prepared for the complexity of aircraft maintenance; units often don't have access to instructional aircraft or have limited time to utilize physical training simulators. Virtual Reality can address these shortages while ensuring airmen have an engaging learning resource to prepare for their mission.
                      <br><br>
                     VINCI was awarded a contract by the Air Force to develop VR environments and modify CODEX for various USAF aircraft. </p>
@@ -61,16 +63,17 @@
        <!-- - - - - - - - - WIND TURBINES ---------------->
        <section class="mb-4 panel background second">
           <section class="text-primary body-font">
-            <h1 class="text-primary text-center sm:text-4xl text-3xl mt-10 -mb-16 font-sans">Wind Turbines</h1>
+            <h1 class="text-primary text-center font-semibold sm:text-4xl text-3xl mt-10 -mb-16 font-sans">Wind Turbines</h1>
             <section class="text-gray-700 body-font">
-               <div class="container mx-auto flex px-5 py-24 md:flex-row flex-col items-center">
+               <div class="container mx-auto flex px-5 py-10 md:flex-row flex-col items-center">
                  <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6 mb-10 md:mb-0 mt-4">
-                   <img class="object-cover object-center rounded p-4" alt="hero" src="../public/img/windturbine">
+                   <img class="object-cover object-center rounded p-4" alt="" src="">
                  </div>
                  <div class="lg:flex-grow md:w-1/2 p-12 flex flex-col md:items-start md:text-left items-center text-center">
-                   <h1 class="title-font sm:text-2xl text-3xl mb-4 font-medium text-primary"><span>Client </span>
+                   <h2 class="title-font sm:text-2xl text-3xl mb-4 font-medium text-primary">
+                     <span>Client </span>
                      <span class="hidden lg:inline-block ml-48">Platform </span>
-                   </h1>
+                   </h2>
                    <p class="mb-8 leading-relaxed text-primary">VINCI is working with Siemens Gamesa Renewable Energy to prototype training solutions for safety equipment in their offshore wind turbine division. Currently, training is focused on helping workers identify errors on safety/fall harnesses. SGRE is challenged with visually showing defects on harnesses to their workforce, but must juggle the costs of doing so as demonstrating defects could damage expensive harnesses. VR can simulate an endless combination of possible defects at no cost, providing an immense amount of training opportunities for their workforce.  </p>
                    <div class="flex justify-center">
                      <button class="inline-flex text-white border-solid border-2 py-2  px-6 focus:outline-none hover:bg-red-600 text-lg">Learn about SGRE</button>
@@ -82,13 +85,13 @@
        </section>
 
        <!-- - - - - - - - - Soldier Training ---------------->
-        <section class="mb-4 panel background second">
+        <section class="mb-4 panel background third">
           <section class="text-primary body-font">
             <h1 class="text-primary text-center sm:text-4xl text-3xl mt-10 -mb-16 font-sans">Soldier Training</h1>
             <section class="text-gray-700 body-font">
-               <div class="container mx-auto flex px-5 py-24 md:flex-row flex-col items-center">
+               <div class="container mx-auto flex px-5 py-10 md:flex-row flex-col items-center">
                  <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6 mb-10 md:mb-0 mt-4">
-                   <img class="object-cover object-center rounded" alt="hero" src="../public/img/spotlight.png">
+                   <img class="object-cover object-center rounded" alt="" src="">
                  </div>
                  <div class="lg:flex-grow md:w-1/2 p-12 flex flex-col md:items-start md:text-left items-center text-center">
                    <h1 class="title-font sm:text-2xl text-3xl mb-4 font-medium text-primary"><span>Client </span>
@@ -108,13 +111,13 @@
 
 
       <!-- - - - - - - - - SafetyDNA VR ---------------->
-        <section class="mb-4 panel background second">
+        <section class="mb-4 panel background fourth">
           <section class="text-primary body-font">
-            <h1 class="text-primary text-center sm:text-4xl text-3xl mt-10 -mb-10 font-sans">SafetyDNA VR</h1>
+            <h1 class="text-primary text-center sm:text-4xl text-3xl mt-10 -mb-16 font-sans">SafetyDNA VR</h1>
             <section class="text-gray-700 body-font">
-               <div class="container mx-auto flex px-5 py-24 md:flex-row flex-col items-center">
+               <div class="container mx-auto flex px-5 py-10 md:flex-row flex-col items-center">
                  <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6 mb-10 md:mb-0 mt-4">
-                   <img class="object-cover object-center rounded" alt="hero" src="../public/img/car.png">
+                   <img class="object-cover object-center rounded" alt="" src="">
                  </div>
                  <div class="lg:flex-grow md:w-1/2 p-12 flex flex-col md:items-start md:text-left items-center text-center">
                    <h1 class="title-font sm:text-2xl text-3xl mb-4 font-medium text-primary"><span>Client </span>
